[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "nn"
authors = [{name = "Giovanni Aviles", email = "giovanni.aviles@ucsf.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "pytest",
    "numpy"
]

[project.urls]
Home = "https://github.com/ggaviles/final-nn/tree/main/nn"
